...

-(IBAction)resetData {
    NSArray* empty = [[NSArray alloc] init];
    NSString *path = [NSTemporaryDirectory() stringByAppendingPathComponent:@"scores.plist"];
    BOOL didWriteToFile = [empty writeToFile:path atomically:YES];
    if (didWriteToFile) {
        UIAlertController* confirmation = [UIAlertController alertControllerWithTitle:@"Success" message:@"The scoreboard data has been successfully reset." preferredStyle:UIAlertControllerStyleAlert];
        [confirmation addAction:[UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleDefault handler:nil]];
        [self presentViewController:confirmation animated:YES completion:nil];
    }
}

- (void)didReceiveMemoryWarning {
    [super didReceiveMemoryWarning];
...
