...
    float width = self.view.frame.size.width;
    float height = self.view.frame.size.height;
    float leftStart = width/2.0 - width/2.2;
    UILabel* headerLeft = [[UILabel alloc]initWithFrame:CGRectMake(leftStart, 75.0, width/2.2, height/7.5)];
    headerLeft.layer.borderWidth = 1.0;
    headerLeft.layer.borderColor = [UIColor whiteColor].CGColor;
    headerLeft.text = @"Username";
    headerLeft.textColor = [UIColor whiteColor];
    headerLeft.textAlignment = NSTextAlignmentCenter;
    headerLeft.font = [UIFont boldSystemFontOfSize:
                       26];
    [self.view addSubview:headerLeft];
    
...
